kubernetes/namespaces/monitoring/alertmanager/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  #namespace: monitoring
spec:
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      containers:
        - image: prom/alertmanager:v0.30.0
          args:
            - "--config.file=/etc/alertmanager/alertmanager.yml"
          imagePullPolicy: IfNotPresent
          name: alertmanager
          ports:
            - name: alertmanager
              containerPort: 9093
          volumeMounts:
            - mountPath: /etc/alertmanager
              name: alertmanager-config
            - mountPath: /etc/alertmanager-secrets
              readOnly: true
              name: alertmanager-secrets
      volumes:
        - name: alertmanager-config
          configMap:
            name: alertmanager-config
        - name: alertmanager-secrets
          secret:
            secretName: alertmanager-secret
