kubernetes/namespaces/monitoring/alertmanager/service.yml
# service-discovery service
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-sd
spec:
  # SRV records will be used by prometheus for service discovery.
  clusterIP: None
  selector:
    app: alertmanager
---
# web UI service 
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  annotations:
    prometheus.io/scrape: 'true'
spec:
  selector:
    app: alertmanager
  type: NodePort
  ports:
  - port: 80
    targetPort: alertmanager
