kubernetes/namespaces/monitoring/alertmanager/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.hyperserver.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager
                port:
                  number: 80
